docs/0.6.2/_sources/generated/skbio.tree.TreeNode.rst.txt

skbio.tree.TreeNode
===================




   
      
   

   
      
   

   

   

   
      
   

   

   
      
   

   

   
      
   

   
      
   

   
      
   

   
      
   

   

   

   
      
   

   
      
   

   
      
   

   
      
   

   
      
   

   

   

   

   

   

   

   
      
   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   

   


.. currentmodule:: skbio.tree

.. autoclass:: TreeNode

   
   .. rubric:: Attributes

   .. autosummary::
   
      ~TreeNode.default_write_format
   

   
   .. rubric:: Built-ins

   .. autosummary::
      :toctree:
   
      ~TreeNode.__copy__
      ~TreeNode.__deepcopy__
      ~TreeNode.__eq__
      ~TreeNode.__ge__
      ~TreeNode.__getitem__
      ~TreeNode.__getstate__
      ~TreeNode.__gt__
      ~TreeNode.__hash__
      ~TreeNode.__iter__
      ~TreeNode.__le__
      ~TreeNode.__len__
      ~TreeNode.__lt__
      ~TreeNode.__ne__
      ~TreeNode.__str__
   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      ~TreeNode.accumulate_to_ancestor
      
      
      ~TreeNode.ancestors
      
      
      ~TreeNode.append
      
      
      ~TreeNode.ascii_art
      
      
      ~TreeNode.assign_ids
      
      
      ~TreeNode.assign_supports
      
      
      ~TreeNode.bifurcate
      
      
      ~TreeNode.cache_attr
      
      
      ~TreeNode.compare_rfd
      
      
      ~TreeNode.compare_subsets
      
      
      ~TreeNode.compare_tip_distances
      
      
      ~TreeNode.copy
      
      
      ~TreeNode.count
      
      
      ~TreeNode.create_caches
      
      
      ~TreeNode.deepcopy
      
      
      ~TreeNode.descending_branch_length
      
      
      ~TreeNode.distance
      
      
      ~TreeNode.extend
      
      
      ~TreeNode.find
      
      
      ~TreeNode.find_all
      
      
      ~TreeNode.find_by_func
      
      
      ~TreeNode.find_by_id
      
      
      ~TreeNode.from_linkage_matrix
      
      
      ~TreeNode.from_taxdump
      
      
      ~TreeNode.from_taxonomy
      
      
      ~TreeNode.get_max_distance
      
      
      ~TreeNode.has_children
      
      
      ~TreeNode.index_tree
      
      
      ~TreeNode.insert
      
      
      ~TreeNode.invalidate_caches
      
      
      ~TreeNode.is_root
      
      
      ~TreeNode.is_tip
      
      
      ~TreeNode.lca
      
      
      ~TreeNode.levelorder
      
      
      ~TreeNode.lowest_common_ancestor
      
      
      ~TreeNode.neighbors
      
      
      ~TreeNode.non_tips
      
      
      ~TreeNode.observed_node_counts
      
      
      ~TreeNode.pop
      
      
      ~TreeNode.postorder
      
      
      ~TreeNode.pre_and_postorder
      
      
      ~TreeNode.preorder
      
      
      ~TreeNode.prune
      
      
      ~TreeNode.read
      
      
      ~TreeNode.remove
      
      
      ~TreeNode.remove_deleted
      
      
      ~TreeNode.root
      
      
      ~TreeNode.root_at
      
      
      ~TreeNode.root_at_midpoint
      
      
      ~TreeNode.root_by_outgroup
      
      
      ~TreeNode.shear
      
      
      ~TreeNode.shuffle
      
      
      ~TreeNode.siblings
      
      
      ~TreeNode.subset
      
      
      ~TreeNode.subsets
      
      
      ~TreeNode.subtree
      
      
      ~TreeNode.tip_tip_distances
      
      
      ~TreeNode.tips
      
      
      ~TreeNode.to_array
      
      
      ~TreeNode.to_taxonomy
      
      
      ~TreeNode.traverse
      
      
      ~TreeNode.unpack
      
      
      ~TreeNode.unpack_by_func
      
      
      ~TreeNode.unroot
      
      
      ~TreeNode.unrooted_copy
      
      
      ~TreeNode.unrooted_deepcopy
      
      
      ~TreeNode.unrooted_move
      
      
      ~TreeNode.write
      
   